Adding new Delete Method for UserActivities
